Criação de autentição no arquivo Python do Locust

--- a/projeto2/www/html/wp-content/languages/admin-pt_BR.po
+++ b/projeto2/www/html/wp-content/languages/admin-pt_BR.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the WordPress - 5.3.x - Development - Administration package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2020-01-29 20:40:35+0000\n"
+"PO-Revision-Date: 2020-02-04 11:20:43+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -4222,7 +4222,7 @@ msgstr "Atualizar o WordPress agora"
 #. URL to network admin, 4: Accessibility text.
 #: wp-admin/includes/update.php:287
 msgid "<a href=\"%1$s\">WordPress %2$s</a> is available! <a href=\"%3$s\" aria-label=\"%4$s\">Please update now</a>."
-msgstr "<a href=\"%1$s\">O WordPress %2$s</a> esta disponível! <a href=\"%3$s\" aria-label=\"%4$s\">Atualize agora</a>."
+msgstr "<a href=\"%1$s\">O WordPress %2$s</a> está disponível! <a href=\"%3$s\" aria-label=\"%4$s\">Atualize agora</a>."
 
 #: wp-admin/includes/theme.php:275
 msgid "Portfolio"
